--- a/.github/workflows/d.yml
+++ b/.github/workflows/d.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         $env:HOME = $env:HOMEPATH
         echo "Set HOME to $HOME"
-        dub run --compiler=$DC
+        dub run
     - name: Run tests on POSIX
       if: ${{ matrix.os != 'windows-latest' }}
       run: |
