--- a/.github/workflows/d.yml
+++ b/.github/workflows/d.yml
@@ -10,6 +10,9 @@ on:
   pull_request:
     branches: [ master ]
 
+  schedule:  # at 03:06 on day-of-month 9
+    - cron: '6 3 9 * *'
+
 jobs:
   build:
     runs-on: ${{ matrix.os }}
