--- a/.github/workflows/d.yml
+++ b/.github/workflows/d.yml
@@ -23,7 +23,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - uses: dlang-community/setup-dlang@4c99aa991ce7d19dd3064de0a4f2f6b2f152e2d7
+    - uses: dlang-community/setup-dlang@v2
     - name: Run tests on Windows after setting HOME environment variable
       if: ${{ matrix.os == 'windows-latest' }}
       run: |
